--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
+    "tsparticles": "^3.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
