--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
