--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
