--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "aos": "^2.3.4",
