--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
     "tailwind-merge": "^3.0.1",
